Fix minor issues

--- a/view/adminhtml/templates/system/config/form/field/toggle.phtml
+++ b/view/adminhtml/templates/system/config/form/field/toggle.phtml
@@ -1,3 +1,9 @@
+<?php
+/**
+ * @var \Bold\CheckoutFlowPaypal\Block\System\Config\Form\Field\Toggle $block
+ */
+?>
+
 <?= $block->getButtonHtml() ?>
 
 <script type="text/x-magento-init">
