--- a/view/frontend/web/css/styles.less
+++ b/view/frontend/web/css/styles.less
@@ -1,19 +1,24 @@
 // Colours
 @gold: #FFC439;
 
-.action.primary.checkout.paypal {
-  background-color: @gold;
-  border-top-color: @gold;
-  border-left-color: @gold;
-  border-right-color: @gold;
-  border-bottom-color: @gold;
-
-  span {
-    display: inline-flex;
-    align-items: center;
-
-    img {
-      height: 1em;
+#minicart-content-wrapper {
+    .action.primary.checkout.paypal {
+        margin-top: 15px;
     }
-  }
+}
+
+.action.primary.checkout.paypal {
+    background-color: @gold;
+    border-color: @gold;
+
+    span {
+        display: inline-flex;
+        align-items: center;
+
+        img {
+            margin-top: 0;
+            height: 1em;
+            vertical-align: middle;
+        }
+    }
 }
