--- a/view/adminhtml/templates/system/config/form/field/toggle.phtml
+++ b/view/adminhtml/templates/system/config/form/field/toggle.phtml
@@ -12,8 +12,8 @@
             "Bold_CheckoutFlowPaypal/js/paypal-toggle": {
                 "url": "<?= $block->getToggleUrl(); ?>",
                 "enabled": "<?= $block->isEnabled(); ?>",
-                "title": "<?= /* @escapeNotVerified */ __('Activating the Checkout with PayPal flow will deactivate all active Bold-hosted flows') ?>",
-                "content": "<?= /* @escapeNotVerified */ __('The Checkout with PayPal flow replaces your Bold-hosted checkout experiences. At any time, you may deactivate the Checkout with Paypal Flow in order to reactive your Bold-hosted flows.') ?>",
+                "title": "<?= /* @escapeNotVerified */ __('Enabling the PayPal Checkout Flow will deactivate all active Bold-hosted flows') ?>",
+                "content": "<?= /* @escapeNotVerified */ __('The PayPal Checkout Flow replaces any active Bold-hosted Checkout flows. You may deactivate the Paypal Checkout Flow at any time to reactive your Bold-hosted flows.') ?>",
                 "alert": "<?= /* @escapeNotVerified */ __('Something went wrong') ?>"
             }
         }
