--- a/view/frontend/templates/cart/paypal_button.phtml
+++ b/view/frontend/templates/cart/paypal_button.phtml
@@ -5,7 +5,7 @@
     <button type="button"
             data-role="proceed-to-checkout"
             title="<?= $block->escapeHtml(__('Checkout with PayPal')) ?>"
-            data-mage-init='{"Magento_Checkout/js/proceed-to-checkout":{"checkoutUrl":"<?= /* @escapeNotVerified */ $block->getCheckoutUrl() ?>"}}'
+            data-mage-init='{"Magento_Checkout/js/proceed-to-checkout":{"checkoutUrl":"<?= /* @escapeNotVerified */ $block->getCheckoutUrl() ?>", "isParallel": true }}'
             class="action primary checkout paypal<?= ($block->isDisabledByQuote()) ? ' disabled' : '' ?>"
             <?php if ($block->isDisabledByQuote()): ?>disabled="disabled"<?php endif; ?>>
         <span><?= $block->escapeHtml(__('Checkout with')) ?>&nbsp;
